crates/plotnik-lib/tests/04-emit/fields/negated_blocks_child.txt
Q = (new_expression -arguments (arguments))
==== diagnostics ====
error: the grammar builds no `new_expression` with these children
 --> query.ptk:1:6
  |
1 | Q = (new_expression -arguments (arguments))
  |      ^^^^^^^^^^^^^^
  |
help: `new_expression` allows fields `arguments` or `constructor`
help: each child is admissible here on its own — it is their combination or order the grammar never produces
